- [x] table overflow issue fix - [x] error borders fixed - [x] download all and filter clear logic fixed - [x] status filter multiselect  mode fix - [x] header profile click issue fix - [x] no data copoment added in users table

--- a/resources/assets/sass/component/_input.scss
+++ b/resources/assets/sass/component/_input.scss
@@ -128,7 +128,11 @@ textarea.form__input {
 .error_input {
   border: 1px solid #d1001e;
 }
-
+.error__multiselect {
+  input {
+    border: 1px solid #d1001e;
+  }
+}
 .panel__input {
   @apply box-border h-10 w-full rounded border border-n-30 bg-paper py-2.5 pl-7 pr-3 outline-none duration-300;
 
